add micro, macro scores

--- a/eval_baseline.ipynb
+++ b/eval_baseline.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "90c2e821-0e52-4b26-82f2-78c6c26ff5bf",
    "metadata": {},
    "outputs": [],
@@ -34,10 +34,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "f83404e6-ea11-4bf4-be75-43714722dded",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Generating train split: 3434 examples [00:00, 38367.92 examples/s]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -46,6 +53,13 @@
       "    features: ['id', 'domain', 'domain_description', 'sql_complexity', 'sql_complexity_description', 'sql_task_type', 'sql_task_type_description', 'sql_prompt', 'sql_context', 'sql', 'sql_explanation'],\n",
       "    num_rows: 3434\n",
       "})\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -64,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "e6acc55b-d25d-4bc3-bbd9-e4bb3ef34367",
    "metadata": {},
    "outputs": [
@@ -111,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "53852cd3-36fc-4c16-912d-78b9cb7ca5b8",
    "metadata": {},
    "outputs": [
@@ -178,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "f6e8b619-4660-4a6a-b700-fa4d91de2dd3",
    "metadata": {
     "collapsed": true,
@@ -357,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "722288c1-d620-43bd-9088-ff65121fcdf0",
    "metadata": {},
    "outputs": [
@@ -375,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "id": "61eea9f0-7aa7-4cde-b3b6-643a2eefa4cc",
    "metadata": {},
    "outputs": [
@@ -403,27 +417,89 @@
       "   Cell stats -- precision:1.0 | recall:0.11 | F1: 0.2051281944247211\n",
       "Complexity: set operations, num. samples = 7\n",
       "   Macro stats -- correct:0.0 | parsable: 0.29\n",
-      "   Cell stats -- precision:0.0 | recall:0.0 | F1: 0.0\n"
+      "   Cell stats -- precision:0.0 | recall:0.0 | F1: 0.0\n",
+      "****************************************************************************************************\n",
+      "Micro-averaged scores:\n",
+      "   Micro Accuracy: 0.18\n",
+      "   Micro Parsable: 0.28\n",
+      "   Micro Precision: 0.82\n",
+      "   Micro Recall: 0.66\n",
+      "****************************************************************************************************\n",
+      "Macro-averaged scores:\n",
+      "   Macro Accuracy: 0.1\n",
+      "   Macro Parsable: 0.29\n",
+      "   Macro Precision: 0.73\n",
+      "   Macro Recall: 0.41\n"
      ]
     }
    ],
    "source": [
+    "scores_by_complexity = {}\n",
+    "\n",
     "for complexity, counts in complexity_eval_res.items():\n",
     "    print(f\"Complexity: {complexity}, num. samples = {counts['total']}\")\n",
     "    print(f\"   Macro stats -- correct:{counts['correct']/counts['total']:.2} | parsable: {counts['parsable']/counts['total']:.2}\")\n",
     "    precision = counts['cell_intersect']/counts['cell_predict']\n",
     "    recall = counts['cell_intersect']/counts['cell_gold']\n",
     "    print(f\"   Cell stats -- precision:{precision:.2} | recall:{recall:.2} | F1: {(2 * precision * recall) / (precision + recall+1e-9)}\")\n",
+    "    \n",
+    "    scores_by_complexity[complexity] = {\n",
+    "        \"accuracy\": counts['correct']/counts['total'],\n",
+    "        \"parsable\": counts['parsable']/counts['total'],\n",
+    "        \"precision\": precision,\n",
+    "        \"recall\": recall,\n",
+    "        \"f1\": (2 * precision * recall) / (precision + recall+1e-9)\n",
+    "    }\n",
     "    # precision = intersection_count / total_predicted\n",
-    "    #recall = intersection_count / total_gold"
+    "    #recall = intersection_count / total_gold\n",
+    "\n",
+    "# Overall stats\n",
+    "overall_counts = {\"correct\":0, \"parsable\":0, \"total\":0, \"cell_intersect\":0, \"cell_predict\":0.000001, \"cell_gold\": 0.000001}\n",
+    "for complexity, counts in complexity_eval_res.items():\n",
+    "    overall_counts['correct'] += counts['correct']\n",
+    "    overall_counts['parsable'] += counts['parsable']\n",
+    "    overall_counts['total'] += counts['total']\n",
+    "    overall_counts['cell_intersect'] += counts['cell_intersect']\n",
+    "    overall_counts['cell_predict'] += counts['cell_predict']\n",
+    "    overall_counts['cell_gold'] += counts['cell_gold']\n",
+    "# print(f\"Overall Complexity: num. samples = {overall_counts['total']}\")\n",
+    "# print(f\"   Micro stats -- correct:{overall_counts['correct']/overall_counts['total']:.2} | parsable: {overall_counts['parsable']/overall_counts['total']:.2}\")\n",
+    "# precision = overall_counts['cell_intersect']/overall_counts['cell_predict']\n",
+    "# recall = overall_counts['cell_intersect']/overall_counts['cell_gold']\n",
+    "# print(f\"   Cell stats -- precision:{precision:.2} | recall:{recall:.2} | F1: {(2 * precision * recall) / (precision + recall+1e-9)}\")\n",
+    "print(\"*\" * 100)\n",
+    "print(\"Micro-averaged scores:\")\n",
+    "micro_accuracy = overall_counts['correct']/overall_counts['total']\n",
+    "micro_parsable = overall_counts['parsable']/overall_counts['total']\n",
+    "micro_precision = overall_counts['cell_intersect']/overall_counts['cell_predict']\n",
+    "micro_recall = overall_counts['cell_intersect']/overall_counts['cell_gold']\n",
+    "micro_f1 = (2 * micro_precision * micro_recall) / (micro_precision + micro_recall+1e-9)\n",
+    "print(f\"   Micro Accuracy: {micro_accuracy:.2}\")\n",
+    "print(f\"   Micro Parsable: {micro_parsable:.2}\")\n",
+    "print(f\"   Micro Precision: {micro_precision:.2}\")\n",
+    "print(f\"   Micro Recall: {micro_recall:.2}\")\n",
+    "\n",
+    "\n",
+    "print(\"*\" * 100)\n",
+    "# Macro accuracy, precision, recall and F1 can be calculated by averaging the values across complexities\n",
+    "print(\"Macro-averaged scores:\")\n",
+    "macro_accuracy = sum([scores_by_complexity[comp]['accuracy'] for comp in scores_by_complexity]) / len(scores_by_complexity)\n",
+    "macro_parsable = sum([scores_by_complexity[comp]['parsable'] for comp in scores_by_complexity]) / len(scores_by_complexity)\n",
+    "macro_precision = sum([scores_by_complexity[comp]['precision'] for comp in scores_by_complexity]) / len(scores_by_complexity)\n",
+    "macro_recall = sum([scores_by_complexity[comp]['recall'] for comp in scores_by_complexity]) / len(scores_by_complexity)\n",
+    "macro_f1 = sum([scores_by_complexity[comp]['f1'] for comp in scores_by_complexity]) / len(scores_by_complexity)\n",
+    "print(f\"   Macro Accuracy: {macro_accuracy:.2}\")\n",
+    "print(f\"   Macro Parsable: {macro_parsable:.2}\")\n",
+    "print(f\"   Macro Precision: {macro_precision:.2}\")\n",
+    "print(f\"   Macro Recall: {macro_recall:.2}\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda:myenv311",
+   "display_name": "wan2.1",
    "language": "python",
-   "name": "myenv31"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -435,7 +511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.14"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
